infrastructure/storage/seaweedfs/access/service-default-seaweedfs-filer-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seaweedfs
    component: filer
    environment: prod
  name: seaweedfs-filer-ui
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: seaweedfs
    component: filer
  sessionAffinity: None
  type: ClusterIP
